Production/Production/src/objects/Li_Community_User__c.object
<CustomObject>
    <fields>
        <fullName>Administrative_Notes__c</fullName>
        <label>Administrative Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <label>Biography</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Users</relationshipLabel>
        <relationshipName>Community_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homepage_URL__c</fullName>
        <label>Homepage URL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Visit_Time__c</fullName>
        <label>Last Visit Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lithium_User_Id__c</fullName>
        <label>Lithium User ID</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Average_Message_Rating__c</fullName>
        <label>Metric Average Message Rating</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Logins__c</fullName>
        <label>Metric Logins</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Messages_Read__c</fullName>
        <label>Metric Messages Read</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Minutes_Online__c</fullName>
        <label>Metric Minutes Online</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Page_Views__c</fullName>
        <label>Metric Page Views</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Posts__c</fullName>
        <label>Lithium Metric Posts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Private_Messages_Received__c</fullName>
        <label>Metric Private Messages Received</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Private_Messages_Sent__c</fullName>
        <label>Metric Private Messages Sent</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REST_URL__c</fullName>
        <label>REST URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Time__c</fullName>
        <label>Registration Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isUserDeleted__c</fullName>
        <label>isUserDeleted</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Community User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Lithium_User_Id__c</columns>
        <columns>Contact__c</columns>
        <columns>Last_Visit_Time__c</columns>
        <columns>Roles__c</columns>
        <columns>Rank__c</columns>
        <columns>Metric_Page_Views__c</columns>
        <columns>Metric_Logins__c</columns>
        <columns>Metric_Posts__c</columns>
        <columns>Registration_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lithium Community User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Users</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>